# ann

./: AllocatedFunction.cpp  CMakeLists.txt  DataDeserialization.hpp  DataSerialization.hpp  DelayConstruct.hpp  DynamicArrayTest.cpp  MemoryResources.hpp  PointerManipulation.hpp  README.md  SIMD.hpp  SIMDTest.cpp  TemplateManipulation.hpp  Type.hpp  UniqueFunction.hpp
AlignedMemory/: AlignedAllocator.hpp  AlignedSpan.hpp  ContainerHelpers.hpp  DynamicArray.hpp
Data/: DataBlock.hpp  DataIterator.hpp  DataSet.hpp  UnevenBlock.hpp
Metrics/: Angular.hpp  Euclidean.hpp  FunctorErasure.hpp  SpaceMetrics.hpp
SIMD/: SIMDInstructionSet.hpp  SIMDOperations.hpp  SIMDVector.hpp  VectorSpan.hpp
src/: CMakeLists.txt
src/ann/: DataSerialization.hpp  DelayConstruct.hpp  MemoryResources.hpp  NestedRanges.hpp  PointerManipulation.hpp  SIMD.hpp
src/ann/AlignedMemory/: AlignedAllocator.hpp  AlignedSpan.hpp  DualVector.hpp  DynamicArray.hpp
src/ann/AlignedMemory/Draft/: aligned-memory.aux  aligned-memory.blg  aligned-memory.tex
src/ann/Data/: DataIterator.hpp  DataSet.hpp  UnevenBlock.hpp
src/ann/SIMD/: SIMDVector.hpp
tests/: CMakeLists.txt  DualVectorTest.cpp
